// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adjustSelectionOffsetsAndCleanup delete - will merge if neighboring selections have the same formats 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a paragraph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": undefined,
            "length": -1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 9,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": true,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete - will merge with last selection if same formats 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": undefined,
        "length": -1,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete all characters 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": undefined,
      "length": -1,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": false,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete all highlighted characters from caret through the end (when "start" with multiple nodes in handleBackspace) 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second para",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": undefined,
              "length": -1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": true,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 6,
          "selection-bold": false,
          "selection-italic": true,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete all highlighted characters up to caret (up to edge of a selection) 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "paragraph for good measure?",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": undefined,
          "length": -1,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 9,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 9,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": false,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete all highlighted characters up to caret (when "end" in handleBackspace) 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "graph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": undefined,
        "length": -1,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 5,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": true,
      "selection-siteinfo": false,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete highlighted characters from middle of one selection 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a sed paragraph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": undefined,
                "length": -1,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 9,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": true,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 3,
          "selection-bold": false,
          "selection-italic": true,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete highlighted characters from middle, deletes a selection, adjusts overlapping selections 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And graph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": undefined,
            "length": -1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 5,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": true,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 1,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete last character of last selection with formats, model should have 'selections' unset 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second aragraph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": undefined,
      "length": -1,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": false,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete one character at the right boundary of two selections 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a secon paragraph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": undefined,
                "length": -1,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 9,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": true,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 5,
          "selection-bold": false,
          "selection-italic": true,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete one highlighted character at left boundary of two selections 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a econd paragraph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": undefined,
                "length": -1,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 9,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": true,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 5,
          "selection-bold": false,
          "selection-italic": true,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup noop - default arguments 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second paragraph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": undefined,
                "length": -1,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 9,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": true,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 6,
          "selection-bold": false,
          "selection-italic": true,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup paste a word with collapsed caret (similar to adding one character on keypress) 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And apple second paragraph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": undefined,
                "length": -1,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 9,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": true,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 6,
          "selection-bold": false,
          "selection-italic": true,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 7,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`splitSelectionsAtCaretOffset split with selections on left and none on right 1`] = `
Immutable.Map {
  "post_id": 166,
  "id": "21ba",
  "parent_id": "39fb",
  "position": 0,
  "type": "p",
  "content": "Here's a first para",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 9,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 9,
        "end": 11,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 11,
        "end": 19,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
}
`;

exports[`splitSelectionsAtCaretOffset split with selections on left and none on right 2`] = `
Immutable.Map {
  "post_id": 166,
  "id": "21bc",
  "parent_id": "39fb",
  "position": 1,
  "type": "p",
  "content": "graph because",
  "meta": Immutable.Map {},
}
`;

exports[`upsertSelection insert first Selection 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second paragraph because",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 6,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 6,
        "end": 12,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 12,
        "end": 30,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`upsertSelection new Selection matches existing Selection 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second paragraph because",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": true,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 3,
        "end": 6,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 6,
        "end": 12,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 12,
        "end": 13,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 13,
        "end": 22,
        "selection-bold": true,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 22,
        "end": 30,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`upsertSelection new Selection overlaps existing Selections 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second paragraph because",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": true,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 3,
        "end": 6,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 6,
        "end": 10,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 10,
        "end": 20,
        "selection-bold": true,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": true,
        "linkUrl": "http://hot.flakes",
      },
      Immutable.Record {
        "start": 20,
        "end": 22,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 22,
        "end": 30,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;
